# subgraph-oracle

./: .gitignore  839.bundle.js  Cargo.toml  Dockerfile.availability-oracle  LICENSE-APACHE  LICENSE-MIT  README.md  app.bundle.js  index.html  json.worker.bundle.js  json.worker.js
.github/workflows/: build-availability-oracle.yml  ci.yml  web-encoder.yml
availability-oracle/: Cargo.toml
availability-oracle/src/: contract.rs  data_edge.rs  epoch_block_oracle_subgraph.rs  graph_monitoring_subgraph.rs  ipfs.rs  main.rs  manifest.rs  network_subgraph.rs  test.rs  util.rs
availability-oracle/src/abi/: RewardsManager.abi.json  SubgraphAvailabilityManager.abi.json
availability-oracle/src/test_files/: BadContract.abi  Contract.abi  Contract.wasm  file_ds.yaml  five.yaml  seven.yaml  substream.yaml  three.yaml  valid.yaml
common/: Cargo.toml
common/src/: chain_id.rs  lib.rs  logging.rs  metrics.rs  prelude.rs
common/src/contracts/: abis.rs  config.rs  dry_run.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: async_cache.rs  prelude.rs
crates/json-oracle-encoder/: Cargo.toml  package-lock.json  package.json
crates/json-oracle-encoder/src/: lib.rs
crates/json-oracle-encoder/src/abi/: submitConfigABI.json
json-encoder-web/: Cargo.toml  index.html  index.ts  package-lock.json  package.json
json-encoder-web/src/: lib.rs
