[package]
name = "availability-oracle"
version = "0.3.4"
authors = ["Leonardo Yvens <leoyvens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = "0.1.50"
tokio = { version = "1.10", features = ["macros", "sync", "time"] }
serde_yaml = "0.9.31"
reqwest = { version = "0.11.4", features = ["json"] }
serde_derive = "1.0.196"
serde = "1.0.196"
serde_json = "1.0.113"
tiny-cid = "0.3"
bytes = "1.0"
clap = "4.5.0"
structopt = "0.3.18"
hex = "0.4.2"
slog = { version = "2.5.2", features = ["release_max_level_trace", "max_level_trace"] }
ethabi = "18.0.0"
wasmparser = "0.74.0"
multibase = "0.8.0"
moka = { version = "0.12.5", features = ["future"] }
graphql-parser = "0.4.0"
secp256k1 = "0.28.2"
ethers = "2.0.10"
url = "2.5.0"
