[package]
name = "availability-oracle"
version = "0.3.4"
authors = ["Leonardo Yvens <leoyvens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../crates/common" }
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["macros", "sync", "time"] }
serde_yaml = "0.9.31"
reqwest = { version = "0.11.24", features = ["json"] }
serde_derive = "1.0.203"
serde = "1.0.203"
serde_json = "1.0.117"
tiny-cid = "0.3"
bytes = "1.6.0"
structopt = "0.3.18"
hex = "0.4.2"
ethabi = "18.0.0"
wasmparser = "0.201.0"
multibase = "0.8.0"
moka = { version = "0.12.5", features = ["future"] }
graphql-parser = "0.4.0"
secp256k1 = "0.28.2"
ethers = "2.0.14"
url = "2.5.0"
