[package]
name = "common"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
async-trait = "0.1.50"
eip-712-derive = { git = "https://github.com/graphprotocol/eip-712-derive" }
slog = { version = "2.5.2", features = ["release_max_level_trace", "max_level_trace"] }
slog-term = "2.6.0"
slog-async = "2.5.0"
futures = { version="0.3.5", features=["compat"] }
warp = "0.3.1"
prometheus = "0.12.0"
tokio = { version="1.10", features=["sync", "time"] }
web3 = "0.16.0"
solidity-bindgen = "0.1.0"
structopt = "0.3.14"
never = "0.1.0"
secp256k1 = "0.20.3"
lazy_static = "1.4.0"
blake3 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
